--- a/src/components/Header/InfoBlock/InfoBlock.module.scss
+++ b/src/components/Header/InfoBlock/InfoBlock.module.scss
@@ -5,13 +5,21 @@
 
     @media (min-width: $deskMin) {
         background-color: $darkGreen;
+        display: block;
+    }
+    
+}
+
+.innerContainer{
+    display: none;
+
+    @media (min-width: $deskMin) {
         display: flex;
         justify-content: space-between;
         align-items: center;
         height: 30px;
         color: white;
     }
-    
 }
 
 .verticalLine {
