--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -1,16 +1,37 @@
-
-
 .cardContainer {
-    height: 280px;
     display: flex;
-    align-items: center;
     flex-direction: column;
-    
+    background-color: white;
+    border: 0px solid white;
+    border-radius: 20px;
+}
+
+
+.imageContainer {
+    border-radius: 20px 20px 0px 0px;
+    width: 100%;
+    height: 250px;
+}
+
+.nameContainer {
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    display: flex;
+    justify-content: space-between;
+    flex-basis: 100%;
+
+}
+
+.manufacturer {
+    font-size: 18px;
+    font-weight: bold;
+    color: 	#A9A9A9;
 }
 
 .productName {
-    font-size: 16px;
+    font-size: 18px;
     font-weight: bold;
-    margin-top: 20px;
-    margin-bottom: 10px;
+ 
 }
