--- a/src/pages/ProductsList/ProductsList.module.scss
+++ b/src/pages/ProductsList/ProductsList.module.scss
@@ -1,27 +1,31 @@
 @import "../../theme/styles/var";
 
+.contentContainer {
+  background-color: #f8f8f8;
+}
+
 .pageContainer {
-    display: grid;
-    grid-template-columns: 30% 70%;
+  display: grid;
+  grid-template-columns: 20% 80%;
 }
 
 .pageTitleContainer {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    margin-top: 30px;
-    margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .pageTitle {
-    font-size: 30px;
-    color: $darkGreen;
+  font-size: 30px;
+  color: $darkGreen;
 }
 
 .productsContainer {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    grid-gap: 10px;
-   
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-gap: 20px;
+  margin-bottom: 40px;
 }
