--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -4,13 +4,14 @@
     background-color: white;
     border: 0px solid white;
     border-radius: 20px;
+    padding-bottom: 20px;
 }
 
 
 .imageContainer {
     border-radius: 20px 20px 0px 0px;
-    width: 100%;
-    height: 250px;
+    height: 180px;
+    max-width: 100%;
 }
 
 .nameContainer {
