--- a/src/components/Filters/FilterItem.module.scss
+++ b/src/components/Filters/FilterItem.module.scss
@@ -1,8 +1,8 @@
-.active {
-  color: #f96030;
+.filterName {
+    font-size: 24px;
+    padding-bottom: 10px;
 }
 
-.listItem {
-  color: #3c5019;
-  cursor: pointer;
+.filterItemContainer {
+    padding-bottom: 20px;
 }
