--- a/src/theme/styles/_var.scss
+++ b/src/theme/styles/_var.scss
@@ -9,9 +9,9 @@ $colorDimGray: rgb(105, 105, 105);
 $colorDarkLight: rgb(53, 53, 53);
 $colorBlack: rgb(0, 0, 0);
 
-$darkGreen: #3C5019;
-$lightGreen: #88B13E;
-$lightOrange: #F96030;
+$darkGreen: #357a38;
+$lightGreen: #357a38;
+$lightOrange: #ff9800;
 // Fonts
 $font-family: 'Jost', sans-serif;
 
