--- a/src/components/Header/NavBar/NavBar.module.scss
+++ b/src/components/Header/NavBar/NavBar.module.scss
@@ -1,11 +1,11 @@
 @import "../../../theme/styles/var";
 
 .container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 80px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
 }
 
 .innerContainer {
@@ -25,23 +25,18 @@
 }
 
 .navItem {
-    padding-left: 25px;
-    padding-right: 25px;
-    color: $darkGreen;
-    font-weight: bold;
-    font-size: 20px;
+  padding-left: 25px;
+  padding-right: 25px;
+  color: $colorSpanishGray;
+  font-weight: bold;
+  font-size: 20px;
 }
 
-.navItem:hover, .navItemActive {
-    color: $lightGreen;
+.navItem:hover,
+.navItemActive {
+  color: $lightGreen;
 }
 
-
-.icon {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.iconLast {
-  padding-left: 15px;
+.iconContainer {
+  padding-left: 20px;
 }
