--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -1,4 +1,10 @@
+@import "../../theme/styles/var";
+
 .cardContainer {
+    width: 30%;
+    margin-left: 1.5%;
+    margin-bottom: 30px;
+    height: 320px;
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -7,11 +13,9 @@
     padding-bottom: 20px;
 }
 
-
 .imageContainer {
-    border-radius: 20px 20px 0px 0px;
+    border-radius: 10px 10px 0px 0px;
     height: 180px;
-    max-width: 100%;
 }
 
 .nameContainer {
@@ -22,17 +26,16 @@
     display: flex;
     justify-content: space-between;
     flex-basis: 100%;
-
+    align-items: center;
 }
 
 .manufacturer {
     font-size: 18px;
     font-weight: bold;
-    color: 	#A9A9A9;
+    color: $colorSpanishGray;
 }
 
 .productName {
     font-size: 18px;
     font-weight: bold;
- 
 }
