--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -1,5 +1,15 @@
+@import "../../theme/styles/var";
+
 .contentContainer {
     background-color: #f8f8f8;
+    padding-bottom: 40px;
+    padding-top: 30px;
+  }
+
+  .pageTitle {
+    font-size: 30px;
+    padding-bottom: 30px;
+    color: $darkGreen;
   }
 
   .orderLabel {
@@ -23,7 +33,8 @@
   }
 
  .formContainer {
-   padding: 20px;
+   height: 100%;
+  
  }
 
  .noProductsLabel {
@@ -37,4 +48,26 @@
 
  .submitButton {
    margin-top: 20px;
+ }
+
+ .productsListContainer {
+   padding-top: 10px;
+ }
+
+ .noProductsWarning {
+   text-align: center;
+   font-size: 20px;
+ }
+
+ .link {
+   color: $darkGreen;
+ }
+
+ .billingDetailsContainer {
+   padding: 20px;
+ }
+
+ .submitButtonContainer {
+   padding-top: 20px;
+   text-align: center;
  }
