--- a/src/pages/ProductsList/ProductsList.module.scss
+++ b/src/pages/ProductsList/ProductsList.module.scss
@@ -7,6 +7,7 @@
 .pageContainer {
   display: grid;
   grid-template-columns: 20% 80%;
+  padding-bottom: 40px;
 }
 
 .pageTitleContainer {
@@ -23,9 +24,14 @@
 }
 
 .productsContainer {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   margin-bottom: 40px;
+}
+
+
+.paginationContainer {
+  display: flex;
+  justify-content: center;
 }
