--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,14 +1,11 @@
 @import "../../theme/styles/var";
 
 .container {
-  display: none;
-
-  @media (min-width: $deskMin) {
-    background-color: $darkGreen;
-    display: block;
-  }
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: $darkGreen;
 }
-
 
 .innerContainer {
   display: none;
