--- a/src/theme/styles/_general.scss
+++ b/src/theme/styles/_general.scss
@@ -1,5 +1,9 @@
 @import "./var";
 
+html {
+    min-height: 100vh;
+}
+
 a {
     text-decoration: none;
     color: inherit;
@@ -9,4 +13,14 @@ ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
+}
+
+body {
+    margin: 0;
+    position: relative;
+    min-height: 100%;
+}
+
+main {
+    margin-top: 110px;
 }
