--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -2,7 +2,9 @@
 
 .cardContainer {
     width: 30%;
-    margin-left: 1.5%;
+    min-width: 200px;
+    flex: 1 1 auto;
+    margin-left: 3.25%;
     margin-bottom: 30px;
     height: 320px;
     display: flex;
