--- a/src/pages/ProductsList/ProductsList.module.scss
+++ b/src/pages/ProductsList/ProductsList.module.scss
@@ -23,13 +23,18 @@
   color: $darkGreen;
 }
 
+.loaderContainer {
+  margin: 0 auto;
+}
+
 .productsContainer {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  //justify-content: space-between;
+  align-items: center;
   margin-bottom: 40px;
+  min-height: 50vh;
 }
-
 
 .paginationContainer {
   display: flex;
