--- a/src/components/Header/InfoBlock/InfoBlock.module.scss
+++ b/src/components/Header/InfoBlock/InfoBlock.module.scss
@@ -3,14 +3,13 @@
 .container {
     display: none;
 
-    @media (min-width: $deskMin) {
+    @media (min-width: $tabMax) {
         background-color: $darkGreen;
         display: block;
     }
-    
 }
 
-.innerContainer{
+.innerContainer {
     display: none;
 
     @media (min-width: $deskMin) {
