--- a/src/components/Header/NavBar/NavBar.module.scss
+++ b/src/components/Header/NavBar/NavBar.module.scss
@@ -15,6 +15,63 @@
   align-items: center;
 }
 
+.burgerMenu {
+  display: none;
+  @media (max-width: $tabMax) {
+    display: block;
+    width: 48px;
+  }
+}
+
+.navMenu {
+  display: block;
+  @media (max-width: $tabMax) {
+    display: none;
+  }
+}
+
+.burgerLinks {
+  padding-top: 20px;
+  text-align: center;
+}
+
+.linksContainer {
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  width: 240px;
+  background-color: #f8f8f8;
+  color: $lightGreen;
+  padding-bottom: 20px;
+}
+
+.loginBurgerMenu {
+  color: #c6c6c6;
+  text-align: center;
+}
+
+.userNameBurgerMenu {
+  font-size: 16px;
+  text-align: center;
+}
+
+.drawerHeaderContainer {
+  background-color: #f8f8f8;
+}
+
+.drawerHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 16px;
+}
+
+.drawerHeaderTitle {
+  font-size: 24px;
+  color: $lightGreen;
+}
+
 .logoOrga {
   color: $lightGreen;
   font-size: 40px;
