--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -13,6 +13,15 @@
     border: 0px solid white;
     border-radius: 20px;
     padding-bottom: 20px;
+
+    @media (max-width: $mobMax) {
+        width: 100%;
+    }
+
+    @media (max-width: $tabMax) and (min-width: $mobMax) {
+        width: 46%;
+        justify-content: space-between;
+    }
 }
 
 .imageContainer {
