--- a/src/theme/styles/_general.scss
+++ b/src/theme/styles/_general.scss
@@ -25,3 +25,16 @@ body {
 main {
     margin-top: 110px;
 }
+
+.overlay {
+    @media (max-width: $tabMax) {
+        position: fixed;
+        top: 0;
+        left: 240px;
+        background-color: rgb(44, 43, 43);
+        width: 100%;
+        height: 100%;
+        z-index: 100;
+        opacity: 0.5;
+    }
+}
