--- a/src/pages/ProductsList/ProductsList.module.scss
+++ b/src/pages/ProductsList/ProductsList.module.scss
@@ -15,6 +15,17 @@
   }
 }
 
+.SortContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.SortContainerTitle {
+  padding-right: 20px;
+}
+
 .filtersFully {
   display: block;
   @media (max-width: $tabMax) {
