--- a/src/pages/ProductsList/ProductsList.module.scss
+++ b/src/pages/ProductsList/ProductsList.module.scss
@@ -54,14 +54,22 @@
   color: $darkGreen;
 }
 
-.loaderContainer {
+.noProductsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin: 0 auto;
+}
+
+.noProductsMessage {
+  padding-bottom: 20px;
+  font-size: 20px;
 }
 
 .productsContainer {
   display: flex;
   flex-wrap: wrap;
-  //justify-content: space-between;
   align-items: center;
   margin-bottom: 40px;
   min-height: 50vh;
