removing console.log, comments, updating order of imports

--- a/src/components/SmallProductCard/SmallProductCard.module.scss
+++ b/src/components/SmallProductCard/SmallProductCard.module.scss
@@ -1,7 +1,7 @@
 .contentContainer {
     background-color: #f8f8f8;
-  }
-  
+}
+
 .cardContainer {
     padding: 10px;
     display: flex;
@@ -10,7 +10,6 @@
     border: 0px solid white;
     align-items: center;
 }
-
 
 .imageContainer {
     width: 30%;
@@ -25,16 +24,14 @@
     margin-right: auto;
 }
 
-
 .manufacturer {
     font-size: 18px;
     font-weight: bold;
-    color: 	#A9A9A9;
+    color: #a9a9a9;
 }
 
 .productName {
     padding-bottom: 10px;
     font-size: 18px;
     font-weight: bold;
- 
 }
