--- a/src/theme/styles/_var.scss
+++ b/src/theme/styles/_var.scss
@@ -1,4 +1,3 @@
-// Colors
 $colorWhite: rgb(255, 255, 255);
 $colorGhostWhite: rgb(250, 250, 255);
 $colorAntiFlashWhite: rgb(242, 243, 244);
@@ -12,10 +11,8 @@ $colorBlack: rgb(0, 0, 0);
 $darkGreen: #357a38;
 $lightGreen: #357a38;
 $lightOrange: #ff9800;
-// Fonts
-$font-family: 'Jost', sans-serif;
 
-// @media width
+$font-family: "Jost", sans-serif;
 
 $mobMin: 320px;
 $mobMax: 480px;
