--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -2,7 +2,7 @@
 
 .firstScreenImageContainer {
     display: block;
-    background-image: url("https://www.getfarmfresh.co.in/wp-content/uploads/2020/10/Banner-01-a22.png");
+    background-image: url("https://bringal.in/images1/order_online2.png");
     background-size: contain;
     background-repeat: no-repeat;
     height: 70vh;
